--- a/index.html
+++ b/index.html
@@ -58,22 +58,22 @@
     <h2>Our Team</h2>
   <ul>
     <li> 
-      <img src="./images/Team Card 1-2.jpg"Mark Guerrero">
+      <img src="./images/Team-Card 1.jpg"Mark Guerrero">
       <h3>Mark Guerrero</h3>
       <p>Product Designer</p>
     </li>
     <li>
-      <img src="./images/Team Card 2-2.jpg" alt="Tom Ford">
+      <img src="./images/Team-Card 2.jpg" alt="Tom Ford">
       <h3>Tom Ford</h3>
       <p>Frontend Developer</p>
     </li>
     <li>
-      <img src="./images/Team Card 3-2.jpg" alt="Camila Garcia">
+      <img src="./images/Team-Card 3.jpg" alt="Camila Garcia">
       <h3>Camila Garcia</h3>
       <p>Marketing</p>
     </li>
     <li>
-      <img src="./images/Team Card 4-2.jpg" alt="Daniel Wilson">
+      <img src="./images/Team-Card 4.jpg" alt="Daniel Wilson">
       <h3>Daniel Wilson</h3>
       <p>UI Designer</p>
     </li>
