--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
     <section>
       <h2>Advantages</h2>
       <ul>
-      
       <li>
         <h3>Strategy</h3>
       <p>Our goal is to identify the business
@@ -44,8 +43,7 @@
       </li>
       <li>
        <h3> Diligence</h3>
-      <p>Diligence
-        Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+      <p> Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
       </li>
       <li>
         <h3>Technologies</h3>
